force-app/main/default/objects/Policy_Rule__mdt/Policy_Rule__mdt.object-meta.xml
<CustomObject>
    <label>Policy Rule</label>
    <pluralLabel>Policy Rules</pluralLabel>
</CustomObject>