force-app/main/default/objects/Policy_Rule__mdt/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
        <value>
            <fullName>Eligibility</fullName>
        </value>
        <value>
            <fullName>Income</fullName>
        </value>
        <value>
            <fullName>Risk</fullName>
        </value>
        <value>
            <fullName>Document</fullName>
        </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>