force-app/main/default/objects/Policy_Rule__mdt/fields/Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Field_API_Name__c</fullName>
    <label>Field API Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>