force-app/main/default/objects/Policy_Rule__mdt/fields/Operator__c.field-meta.xml
<CustomField>
    <fullName>Operator__c</fullName>
    <label>Operator</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value><fullName>=</fullName><default>false</default><label>=</label></value>
            <value><fullName>!=</fullName><default>false</default><label>!=</label></value>
            <value><fullName>&gt;</fullName><default>false</default><label>&gt;</label></value>
            <value><fullName>&lt;</fullName><default>false</default><label>&lt;</label></value>
            <value><fullName>&gt;=</fullName><default>false</default><label>&gt;=</label></value>
            <value><fullName>&lt;=</fullName><default>false</default><label>&lt;=</label></value>
            <value><fullName>Contains</fullName><default>false</default><label>Contains</label></value>
        </valueSetDefinition>
    </valueSet>
</CustomField>