force-app/main/default/objects/Policy_Rule__mdt/fields/Product_Code__c.field-meta.xml
<CustomField>
    <fullName>Product_Code__c</fullName>
    <label>Product Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>