force-app/main/default/objects/Policy_Rule__mdt/fields/Risk_Points__c.field-meta.xml
<CustomField>
    <fullName>Risk_Points__c</fullName>
    <label>Risk Points</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>