force-app/main/default/objects/Policy_Rule__mdt/fields/Threshold_Value__c.field-meta.xml
<CustomField>
    <fullName>Threshold_Value__c</fullName>
    <label>Threshold Value</label>
    <length>50</length>
    <type>Text</type>
</CustomField>